src/objects/Firefighter_Request__c.object
<CustomObject>
    <description>Historical tracking for Firefighter requests.</description>
    <fields>
        <fullName>Approved_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Reason</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Firefighter_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elevated_Access_End_Date__c</fullName>
        <inlineHelpText>This will be stamped once the record is approved.</inlineHelpText>
        <label>Elevated Access End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Elevated_Access_Reason__c</fullName>
        <label>Elevated Access Reason</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elevated_Access_Start_Date__c</fullName>
        <inlineHelpText>This will be stamped once the record is approved.</inlineHelpText>
        <label>Elevated Access Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Profile_ID__c</fullName>
        <label>Previous Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>JDE-Admin-Functional Tester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Comment__c</fullName>
        <label>Review Comment</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <inlineHelpText>This will be auto-populated once review comment is updated</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will be auto-populated once review comment is updated</inlineHelpText>
        <label>Reviewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Firefighter_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QTC</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>EMT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request for User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Firefighter_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Firefighter Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Reviewed_by__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Fire Fighter Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Firefighter Requests</pluralLabel>
    <recordTypes>
        <fullName>Firefighter_Request</fullName>
        <active>true</active>
        <label>Firefighter Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Request</fullName>
        <active>true</active>
        <label>New Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>